fixed column alignment issues mostly in the editor, fixed long titles breaking when using columns

--- a/src/block/table-of-contents/editor.scss
+++ b/src/block/table-of-contents/editor.scss
@@ -31,6 +31,8 @@
 
 	.stk-block-table-of-contents__list-item__exclude-button {
 		display: inline-block;
+		height: auto;
+		vertical-align: middle;
 	}
 
 	.stk-block-table-of-contents__list-item__excluded {
